--- a/style.css
+++ b/style.css
@@ -24,3 +24,25 @@ nav{
 	.menu ul li { list-style: none; font-size: 12px; 
 		font-weight: bold; text-transform: uppercase;
 		 }
+         section { display: flex;
+         }
+         .leftside { width: 45%; height: auto; overflow: hidden; margin-top: 20px;
+         }
+         .leftside img { width: 600px;height: 450px;margin-right: 20px;
+          } 
+         .rightside{ width: 55%; height: 300px; color: white;
+         text-align: center; margin-top: 80px;padding: 40px; 
+         }
+         .rightside h1{ font-size: 50px; font-weight: 900;text-transform: uppercase;
+         }
+         .rightside p{ font-size: 1.1rem; padding: 30px 0;
+          }
+         .rightside button{ font-size: 17px; font-weight: bold;
+          color: white;text-transform: uppercase;
+         background: linear-gradient(57deg, #00c6a7, #1e4d92); 
+             border-radius: 4px; padding: 20px 35px;
+         }
+         .rightside button:hover { background: linear-gradient(57deg, #1e4d92, #00c6a7);
+         
+         }
+         
